[package]
name = "game-business"
version = "0.1.0"
authors = ["Evolveye <stolarski.paw@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.10.1"
hyper="0.13"

base64 = "0.12.3"
sha-1 = "0.9.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "^0.7"
